# E2.9_homework

./: .env  .gitignore  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
core/: helper.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_emailsend_status.py
front/static/js/: plugins.js
front/templates/: base.html  index.html
sender_email/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_api.py  test_core.py
