[tool.poetry]
name = "e2.9_homework"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
whitenoise = "^5.2.0"
dj-database-url = "^0.5.0"
django-sendgrid-v5 = "^0.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
isort = "^5.8.0"
pylint-django = "^2.4.4"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
